# controllers/usuarios.go
@@ -10,14 +10,13 @@ import (
 )
 
 // RegisterUser godoc
-// @Summary Register User
-// @Description Save new user
+// @Summary Registrar Usuario
+// @Description Guardar nuevo usuario
 // @Param user body types.UsuariosRegister true "Create User"
 // @Produce application/json
-// @Tags user
+// @Tags Usuario
 // @Success 200
-// @Router /api/auth/register [post]
-
+// @Router /auth/register [post]
 func Register(c *gin.Context) {
 	var err error
 	var input types.UsuariosRegister
@@ -33,6 +32,14 @@ func Register(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"message": "User registered successfully"})
 }
 
+// LoginUser godoc
+// @Summary Login Usuario
+// @Description Autentificar usuario
+// @Param user body types.UsuariosLogin true "Autentificar Usuario"
+// @Produce application/json
+// @Tags Usuario
+// @Success 200
+// @Router /auth/login [post]
 func Login(c *gin.Context) {
 	var input types.UsuariosLogin
 	if err := c.ShouldBindJSON(&input); err != nil {
@@ -48,7 +55,7 @@ func Login(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"token": token})
 }
 
-func UserData(c *gin.Context) {
+func GetUserById(c *gin.Context) {
 	user, err := service.ServiceGetUserByID(c.MustGet("userID").(uint))
 	if err != nil {
 		c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
@@ -57,6 +64,15 @@ func UserData(c *gin.Context) {
 	c.JSON(http.StatusOK, user)
 }
 
+// ListUser godoc
+// @Summary Listado de Usuarios
+// @Description Listado de usuarios
+// @Schemes
+// @Produce application/json
+// @Tags Usuario4
+// @Success 200
+// @Router /v1/list [get]
+// @Security Bearer
 func GetAllUsers(c *gin.Context) {
 	user, err := service.ServiceGetAllUser()
 
